--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "im-with-you",
-  "version": "1.0.0",
-  "description": "Piattaforma web per le fragilità emotive e sociali",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/matteo-naccarato/im-with-you.git"
-  },
-  "author": "matteo-naccarato",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/matteo-naccarato/im-with-you/issues"
-  },
-  "homepage": "https://github.com/matteo-naccarato/im-with-you#readme"
+    "name": "im-with-you",
+    "version": "1.0.0",
+    "description": "Piattaforma web per le fragilità emotive e sociali",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/matteo-naccarato/im-with-you.git"
+    },
+    "author": "matteo-naccarato",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/matteo-naccarato/im-with-you/issues"
+    },
+    "homepage": "https://github.com/matteo-naccarato/im-with-you#readme",
+    "dependencies": {
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.7"
+    }
 }
