--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/matteo-naccarato/im-with-you#readme",
     "dependencies": {
+        "bootstrap": "^5.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "nodemon": "^2.0.7"
