--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bootstrap": "^5.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "startbootstrap-sb-admin-2": "^4.1.4"
     }
 }
