--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "morgan": "^1.10.0",
+        "mysql": "^2.18.1",
         "nodemon": "^2.0.7",
         "startbootstrap-sb-admin-2": "^4.1.4"
     }
