--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     },
     "homepage": "https://github.com/matteo-naccarato/im-with-you#readme",
     "dependencies": {
+        "aws-sdk": "^2.911.0",
         "bootstrap": "^5.0.0",
+        "dotenv": "^9.0.2",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "method-override": "^3.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "multer-s3": "^2.9.0",
         "nodemon": "^2.0.7",
         "sqlite3": "^5.0.2",
         "startbootstrap-sb-admin-2": "^4.1.4"
