--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "sqlite3": "^5.0.2",
-        "startbootstrap-sb-admin-2": "^4.1.4"
+        "sqlite3": "^5.0.2"
     }
 }
