--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-session": "^1.17.2",
+        "mem-fs": "^2.2.1",
+        "mem-fs-editor": "^9.0.1",
+        "memory-fs": "^0.5.0",
         "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
@@ -34,6 +37,7 @@
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "sqlite3": "^5.0.2"
+        "sqlite3": "^5.0.2",
+        "uninstall": "0.0.0"
     }
 }
