--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "sqlite3": "^5.0.2",
-        "uninstall": "0.0.0"
+        "sqlite3": "^5.0.2"
     }
 }
